--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Welcome</title>
 </head>
 <body>
-  <h1>Your Name</h1>
-  <p>Course: COP4813 - Web Applications Programming</p>
-  <p>Major: Your Major</p>
-  <p>Hello, World!</p>
+  <h1>Paul Harrington/h1>
+  <p>Course: COP4813 (Web Applications Programming)</p>
+  <p>Major: Computer Science (B.A.) </p>
+  <p>This is a simple message. Aquí tienes un mensaje sencillo. </p>
 </body>
 </html>
