--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Welcome</title>
 </head>
 <body>
-  <h1>Paul Harrington </h1>
+  <h1>A Basic HTML PagePaul Harrington </h1>
+  <p>Name: Paul Harrington </p>
   <p>Course: COP4813 (Web Applications Programming)</p>
   <p>Major: Computer Science (B.A.) </p>
   <p>This is a simple message. Aquí tienes un mensaje sencillo. </p>
