--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>A Basic HTML Page </h1>
+  <p> The objectives of this project are to design and implement a basic webpage using HTML, deploy it publicly through a free hosting platform (in this case github), and then to show the documentation and the functionality of the webpage and assignment. </p>
   <p>Name: Paul Harrington </p>
   <p>Course: COP4813 (Web Applications Programming)</p>
   <p>Major: Computer Science (B.A.) </p>
