--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <title>Welcome</title>
 </head>
 <body>
+
+  <!-- Main Webpage Heading/Title -->
   <h1>A Basic HTML Page </h1>
-  <p> The objectives of this project are to design and implement a basic webpage using HTML, deploy it publicly through a free hosting platform (in this case github), and then to show the documentation and the functionality of the webpage and assignment. </p>
-  <p>Name: Paul Harrington </p>
+
+  <!-- Objective statement required by rubric -->
+  <p>The objectives of this project are to design and implement a basic webpage using HTML, deploy it publicly through a free hosting platform (in this case github), and then to show the documentation and the functionality of the webpage and assignment.</p>
+
+  <!-- Required student information -->
+  <p>Name: Paul Harrington</p>
   <p>Course: COP4813 (Web Applications Programming)</p>
-  <p>Major: Computer Science (B.A.) </p>
-  <p>This is a simple message. Aquí tienes un mensaje sencillo. </p>
+  <p>Major: Computer Science (B.A.)</p>
+
+  <!-- Simple message -->
+  <p>This is a simple message. Aquí tienes un mensaje sencillo.</p>
+
 </body>
 </html>
